--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    h1>Node.js + Socket.io 聊天室</h1>
     <!-- 登入輸入區 -->
     <input type="text" id="nickname">
     <button onclick="login()">登入</button>
